<resources>
    <string name="app_name">비트코인 오더북</string>
    <string name="banner_ad_unit_id">ca-app-pub-6722966527757194/9915256669</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="powered">Powered by Jeong<![CDATA[&]]>Park</string>
    <string name="help">도움말 다시보기</string>


    <string name="share">공유하기</string>
    <string name="comment">리뷰남기기</string>
    <string name="email">문의하기</string>
    <string name="donation">기부하기</string>
    <string name="refresh">초 뒤, 새로고침</string>

    <string name="direct">거래소 바로가기</string>
    <string name="korbit">KORBIT</string>
    <string name="coinone">COINONE</string>
    <string name="bithumb">BITHUMB</string>
    <string name="download">앱 바로가기</string>
    <string name="bch_orderbook">BCH 오더북 </string>
    <string name="btc_orderbook">비트코인 오더북 </string>
    <string name="eth_orderbook">이더리움 오더북 </string>
    <string name="etc_orderbook">ETC 오더북</string>
    <string name="dash_orderbook">대시 오더북</string>
    <string name="ltc_orderbook">라이트코인 오더북</string>
    <string name="xrp_orderbook">리플 오더북</string>
    <string name="orderbook_title_ask_qty">매도잔량</string>
    <string name="orderbook_title_bid_qty">매수잔량</string>
    <string name="orderbook_title_price">주문가격</string>
    <string name="main_summary_buy">매수 최고가: %2$s (%1$s)</string>
    <string name="main_summary_sell">매도 최저가: %2$s (%1$s)</string>
    <string name="main_summary_avg_buy">매수가 평균: %1$s</string>
    <string name="main_summary_avg_sell">매도가 평균: %1$s</string>
    <string name="errro_0">데이터를 불러오지 못했습니다.\n\n잠시 후 재시도 해주세요.</string>
    <string name="errro_404_200">데이터를 불러오지 못했습니다.\n\n좌측 [문의하기] 버튼을 통해 문제를 알려주세요.\n\n업데이트 하겠습니다.</string>
    <string name="errro_etc">데이터를 불러오지 못했습니다.\n\n좌측 [문의하기] 버튼을 통해 문제를 알려주세요.\n\n업데이트 하겠습니다.</string>

    <string name="code_poloniex">POLONIEX</string>
    <string name="code_btc38">BTC38</string>
    <string name="code_kraken">KRAKEN</string>

    <string name="currency_usd">USD(미화)</string>
    <string name="currency_eur">EUR(유로화)</string>
    <string name="currency_cny">CNY(위엔화)</string>
    <string name="currency_jpy">JPY(엔화)</string>
    <string name="error_price">가격 정보를 불러오지 못했습니다</string>

    <string name="menu_refresh">새로고침</string>
    <string name="menu_chart">차트</string>
    <string name="chart_info">Poloniex BTC/USDT</string>
    <string name="menu_donation">이 버튼의 용도는..</string>
    <string name="text_donation">더 좋은 제품을 만드는데 사용하겠습니다.\n\n아래 주소는 코인원에서 사용하는 주소입니다.</string>
    <string name="donation_btc">BTC 기부 주소</string>
    <string name="donation_eth">ETH 기부 주소</string>
    <string name="donation_etc">ETC 기부 주소</string>
    <string name="donation_btn_copy">복사</string>
    <string name="donation_address_btc">1N11nqjLtYmpbYMetvegBKEjgkzNvJc8Vp</string>
    <string name="donation_address_eth">0x82a38d5ced319b85a4d0f87915c3bd351855dff9</string>
    <string name="donation_address_etc">0xd7f765590b99672bfc11cda19998c5fa0e055726</string>
    <string name="donation_text_copy">가 복사되었습니다.</string>
</resources>
