<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/main_nav_help"
        android:icon="@drawable/ic_help_outline_black_48dp"
        android:title="@string/help" />
    <item
        android:id="@+id/main_nav_review"
        android:icon="@drawable/ic_rate_review_black_48dp"
        android:title="@string/comment" />
    <item
        android:id="@+id/main_nav_send"
        android:icon="@drawable/ic_mail_outline_black_48dp"
        android:title="@string/email" />
    <item
        android:id="@+id/main_nav_share"
        android:icon="@drawable/ic_share_black_48dp"
        android:title="@string/share" />
    <item android:title="@string/direct">
        <menu>

            <item
                android:id="@+id/main_nav_coinone"

                android:title="@string/coinone" />
            <item
                android:id="@+id/main_nav_korbit"

                android:title="@string/korbit" />
            <item
                android:id="@+id/main_nav_bithumb"

                android:title="@string/bithumb" />

        </menu>
    </item>
    <item android:title="@string/download">
        <menu>

            <item
                android:id="@+id/main_nav_bch_orderbook"

                android:title="@string/bch_orderbook" />
            <item
                android:id="@+id/main_nav_eth_orderbook"

                android:title="@string/eth_orderbook" />
            <item
                android:id="@+id/main_nav_etc_orderbook"

                android:title="@string/etc_orderbook" />
            <item
                android:id="@+id/main_nav_ltc_orderbook"

                android:title="@string/ltc_orderbook" />
            <item
                android:id="@+id/main_nav_xrp_orderbook"

                android:title="@string/xrp_orderbook" />
            <item
                android:id="@+id/main_nav_dash_orderbook"

                android:title="@string/dash_orderbook" />
        </menu>
    </item>


</menu>
