<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/orderbook_title_ask_qty"
            android:textColor="@color/primary_text"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"

            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/orderbook_title_price"
            android:textColor="@color/primary_text"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/orderbook_title_bid_qty"
            android:textColor="@color/primary_text"

            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />



        <ListView
            android:id="@+id/orderbook_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:fadingEdge="none" />



</LinearLayout>
