<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/text_donation"
            android:textColor="@color/primary_dark"
            android:textSize="13dp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="20dp"

                android:text="@string/donation_btc"
                android:textColor="@color/primary_dark"
                android:textSize="15dp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp">

                <Button
                    android:id="@+id/dontion_btn_btc"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:gravity="center"
                    android:background="@color/blue_background"
                    android:text="@string/donation_btn_copy"
                    android:textColor="@color/primary_text"
                    android:textSize="14dp" />
                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/dontion_btn_btc"
                    android:layout_alignParentLeft="true"
                    android:text="@string/donation_address_btc"
                    android:textColor="@color/primary_dark"
                    android:alpha="0.8"
                    android:textSize="11dp"/>
            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="20dp"

                android:text="@string/donation_eth"
                android:textColor="@color/primary_dark"
                android:textSize="15dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp">

                <Button
                    android:id="@+id/dontion_btn_eth"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:layout_marginRight="8dp"
                    android:background="@color/blue_background"
                    android:text="@string/donation_btn_copy"
                    android:textColor="@color/primary_text"
                    android:textSize="14dp" />
                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/dontion_btn_eth"
                    android:layout_alignParentLeft="true"
                    android:text="@string/donation_address_eth"
                    android:textColor="@color/primary_dark"
                    android:alpha="0.8"
                    android:textSize="11dp"/>
            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="20dp"

                android:text="@string/donation_etc"
                android:textColor="@color/primary_dark"
                android:textSize="15dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp">

                <Button
                    android:id="@+id/dontion_btn_etc"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:layout_marginRight="8dp"
                    android:background="@color/blue_background"
                    android:text="@string/donation_btn_copy"
                    android:textColor="@color/primary_text"
                    android:textSize="14dp" />
                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/dontion_btn_etc"
                    android:layout_alignParentLeft="true"
                    android:text="@string/donation_address_etc"
                    android:alpha="0.8"
                    android:textColor="@color/primary_dark"
                    android:textSize="11dp"/>
            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>